# napari-pyhim

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_pyhim/: __init__.py  _param.py  _widget.py  napari.yaml
src/napari_pyhim/_tests/: test_sample_data.py  test_widget.py
