[metadata]
name = napari-pyhim

description = A napari-plugin to configurate the parameters for pyHiM, a software for the analysis of multiplexed DNA-FISH data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XDevos/napari-pyhim
author = Xavier DEVOS
author_email = xavier.devos@cbs.cnrs.fr
license = LGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/XDevos/napari-pyhim/issues
    Documentation = https://github.com/XDevos/napari-pyhim#README.md
    Source Code = https://github.com/XDevos/napari-pyhim
    User Support = https://github.com/XDevos/napari-pyhim/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pyhim = napari_pyhim:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
